src/objects/AMS_OSCAR__c.object
<CustomObject>
    <fields>
        <fullName>Process__c</fullName>
        <description>Define the process to follow for this LifeCycle Request</description>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW.HO.1.0</fullName>
                    <default>true</default>
                    <label>NEW.HO.1.0</label>
                </value>
                <value>
                    <fullName>NEW.BR</fullName>
                </value>
                <value>
                    <fullName>NEW.1.1</fullName>
                </value>
                <value>
                    <fullName>CHANGE.1.0</fullName>
                </value>
                <value>
                    <fullName>CHANGE.CHINESE.1.1</fullName>
                </value>
                <value>
                    <fullName>TERMINATED.1.0</fullName>
                </value>
                <value>
                    <fullName>BANK.ACCOUNT.CHANGES</fullName>
                </value>
                <value>
                    <fullName>MAJOR.CHANGES</fullName>
                </value>
                <value>
                    <fullName>DGR.DGA</fullName>
                </value>
                <value>
                    <fullName>NEW.BR.ABROAD</fullName>
                </value>
                <value>
                    <fullName>NEW.TIDS.1.0</fullName>
                </value>
                <value>
                    <fullName>NEW.MSO.1.0</fullName>
                </value>
                <value>
                    <fullName>NEW.GSA.1.0</fullName>
                </value>
                <value>
                    <fullName>NEW.GSSA.1.0</fullName>
                </value>
                <value>
                    <fullName>NEW.AHA.1.0</fullName>
                </value>
                <value>
                    <fullName>NEW.SA.1.0</fullName>
                </value>
                <value>
                    <fullName>NEW.AHA.1.0.BSP</fullName>
                </value>
                <value>
                    <fullName>NEW.GSA.1.0.BSP</fullName>
                </value>
                <value>
                    <fullName>CORRECTION.1.0</fullName>
                </value>
                <value>
                    <fullName>CERTIFICATION.1.0</fullName>
                </value>
                <value>
                    <fullName>VR.1.0</fullName>
                </value>
                <value>
                    <fullName>VR.1.0.CA</fullName>
                </value>
                <value>
                    <fullName>CER.1.0</fullName>
                </value>
                <value>
                    <fullName>ANG.NEW.HE.LITE.1.0</fullName>
                </value>
                <value>
                    <fullName>ANG.NEW.HE.STANDARD.1.0</fullName>
                </value>
                <value>
                    <fullName>ANG.NEW.AE.1.0</fullName>
                </value>
                <value>
                    <fullName>ANG.MAJOR.CHANGES.1.0</fullName>
                </value>
                <value>
                    <fullName>NGCORRECTION.1.0</fullName>
                </value>
                <value>
                    <fullName>IEP.BANK.ACCOUNT.SETUP</fullName>
                </value>
                <value>
                    <fullName>ANG.FOPMANAGEMENT.1.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotions__c</fullName>
        <description>Used to store all promotions applied to this case.
Promotions defined in Custom Metadata &apos;Oscar_Promotion__mdt&apos;</description>
        <label>Promotions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TIDS_to_GoLite</fullName>
                    <label>TIDS to GoLite (free)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_of_payment_received__c</fullName>
        <label>Payment Status Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPM_Approval__c</fullName>
        <label>Manager Approval/Disapproval</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Process__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Authorize Approval</fullName>
                </value>
                <value>
                    <fullName>Reject approval</fullName>
                </value>
                <value>
                    <fullName>Authorize Disapproval</fullName>
                </value>
                <value>
                    <fullName>Reject Disapproval</fullName>
                </value>
                <value>
                    <fullName>Reprocess case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reactivate_Agent_in_BSPlink_CASSlink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reactivate Agent in BSPlink / CASSlink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reactivate_Ticketing_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reactivate Ticketing Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reactivated_Agent_in_BSPlink_CASSlink__c</fullName>
        <label>Reactivated Agent in BSPlink / CASSlink</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_For_KPI__c</fullName>
        <description>This field calculate the value to push to CASE REASON1__C field in order to calculate the KPIs correctly</description>
        <formula>IF(RecordType.DeveloperName =&quot;NEW&quot;
    ,CASE(TEXT(Process__c)
        ,&quot;NEW.HO.1.0&quot;, &quot;New HO&quot;
        ,&quot;NEW.BR&quot;, &quot;New BR / IP&quot;
        ,&quot;NEW.1.1&quot;, &quot;New HO&quot;
        ,&quot;TERMINATED.1.0&quot;, &quot;Termination&quot;
        ,&quot;NEW.BR.ABROAD&quot;, &quot;New BR Abroad&quot;
        ,&quot;NEW.AHA.1.0&quot;, &quot;New AHA&quot;
    ,&quot;NEW.AHA.1.0.BSP&quot;, &quot;New AHA&quot;
        ,&quot;NEW.GSSA.1.0&quot;, &quot;New GSSA&quot;
        ,&quot;NEW.TIDS.1.0&quot;, &quot;New TIDS&quot;
        ,&quot;NEW.GSA.1.0&quot;, &quot;New GSA&quot;       
    ,&quot;NEW.GSA.1.0.BSP&quot;, &quot;New GSA&quot;    
        ,&quot;NEW.MSO.1.0&quot;, &quot;New MSO&quot;
        ,&quot;NEW.SA.1.0&quot;, &quot;New SA&quot;
        ,&quot;CORRECTION.1.0&quot;, &quot;Corrections&quot;
        ,&quot;&quot;

      )
    ,IF(RecordType.DeveloperName=&quot;CHANGE&quot;, 
        IF(INCLUDES(Type_of_change__c, &quot;Location type&quot;), &quot;CHG – Data Maintenance&quot;
        ,IF(OR(INCLUDES(Type_of_change__c, &quot;Ownership to non-IATA Agent&quot;), INCLUDES(Type_of_change__c, &quot;Ownership to IATA Agent&quot;), INCLUDES(Type_of_change__c, &quot;Legal status&quot;)), &quot;CHO / CHS – Change of Ownership / Legal Status&quot;
        ,IF(INCLUDES(Type_of_change__c, &quot;Major Shareholding&quot;),&quot;CHC – Change of Shareholding&quot;
        ,IF(INCLUDES(Type_of_change__c, &quot;Name&quot;),&quot;CHN - Change of Name&quot;
        ,IF(OR(INCLUDES(Type_of_change__c, &quot;Location&quot;), INCLUDES(Type_of_change__c, &quot;Location with inspection&quot;)),&quot;CHL - Change of Location&quot;
        ,IF(INCLUDES(Type_of_change__c, &quot;VMFR&quot;),&quot;VMFR Setup/Update&quot;
        ,IF(INCLUDES(Type_of_change__c, &quot;Minor Shareholding&quot;),&quot;MCH – Minor Change of Shareholding&quot;
        ,&quot;&quot;  )))))))
    , &quot;&quot;)
   )</formula>
        <label>Reason For KPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_change_of_Financial_result__c</fullName>
        <description>A reason must be specified if the Financial Review Result is going to be changed.</description>
        <label>Reason for change of Financial result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_unsuccessful_application__c</fullName>
        <description>This field will be shown on left side panel in different steps and each step will have only a subset of values available.
The values selected by the analyst will determine the reason why the application failed</description>
        <label>Reason for unsuccessful application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IATA Requirements not met</fullName>
                </value>
                <value>
                    <fullName>Fees not paid</fullName>
                </value>
                <value>
                    <fullName>Process too burocratic/unflexible</fullName>
                </value>
                <value>
                    <fullName>Agent decided to work with consolidator</fullName>
                </value>
                <value>
                    <fullName>Agent decided to apply for TIDS</fullName>
                </value>
                <value>
                    <fullName>Agent decided to apply for GoLite</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Bank_Guarantee_amount__c</fullName>
        <label>Received Bank Guarantee amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Bank_Guarantee_currency__c</fullName>
        <label>Received Bank Guarantee currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>ANG</fullName>
                </value>
                <value>
                    <fullName>AOA</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>AWG</fullName>
                </value>
                <value>
                    <fullName>AZN</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BBD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BIF</fullName>
                </value>
                <value>
                    <fullName>BMD</fullName>
                </value>
                <value>
                    <fullName>BND</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BSD</fullName>
                </value>
                <value>
                    <fullName>BTN</fullName>
                </value>
                <value>
                    <fullName>BWP</fullName>
                </value>
                <value>
                    <fullName>BZD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CDF</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reconsideration_date__c</fullName>
        <label>Reconsideration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reconsideration_result__c</fullName>
        <label>Reconsideration result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Used so we can access the region on triggers</description>
        <formula>TEXT(Account__r.IATA_ISO_Country__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinstate_STDs_Reactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on Late/Absence of NOC</description>
        <label>Reinstate STDs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejection_notification_sent__c</fullName>
        <label>Rejection notification sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rejection_result__c</fullName>
        <label>Rejection result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_FS_if_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release FS (if applicable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_FS_withdrawal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release FS (if applicable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_previous_FS_if_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will update the Date on field Previous FS Released when the value is set to true</description>
        <label>Release previous FS if applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remove_STDs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on Late/Absence NOC</description>
        <label>Remove STDs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Bank_Guarantee_amount__c</fullName>
        <label>Requested Bank Guarantee amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Bank_Guarantee_currency__c</fullName>
        <label>Requested Bank Guarantee currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>ANG</fullName>
                </value>
                <value>
                    <fullName>AOA</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>AWG</fullName>
                </value>
                <value>
                    <fullName>AZN</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BBD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BIF</fullName>
                </value>
                <value>
                    <fullName>BMD</fullName>
                </value>
                <value>
                    <fullName>BND</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BSD</fullName>
                </value>
                <value>
                    <fullName>BTN</fullName>
                </value>
                <value>
                    <fullName>BWP</fullName>
                </value>
                <value>
                    <fullName>BZD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CDF</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_event_creation_date__c</fullName>
        <label>Risk event creation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roll_back_account_data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll back account data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAAM_Deadline_Date__c</fullName>
        <label>OSCAR Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SIDRA_lite_reason__c</fullName>
        <description>SIDRA lite reason for Oscar Creation</description>
        <label>SIDRA lite reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STEP10__c</fullName>
        <label>STEP10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STEP11__c</fullName>
        <label>STEP11</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STEP12__c</fullName>
        <label>STEP12</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sanity_Check_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to validate if the sanity check had been already passed. If so, it should not be allowed to pass again.</description>
        <label>Sanity_Check_Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sanity_check_deadline__c</fullName>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sanity_check_received__c</fullName>
        <label>Sanity check completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sanity_check_results__c</fullName>
        <label>Sanity check results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_FS_request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FS request Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_approval_letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_inspection_request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspection Request Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shut_Down_TKT_System_GDS_and_BSPlink__c</fullName>
        <label>Inform GDS to Shut Down TKT System</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Oscar Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted_Future Date</fullName>
                </value>
                <value>
                    <fullName>Accepted_Pending Agreement</fullName>
                </value>
                <value>
                    <fullName>Accepted_Pending BG</fullName>
                </value>
                <value>
                    <fullName>Accepted_Pending Docs</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed_ Not Accepted</fullName>
                </value>
                <value>
                    <fullName>Closed_Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed_Withdrawn</fullName>
                </value>
                <value>
                    <fullName>On Hold_External</fullName>
                </value>
                <value>
                    <fullName>On Hold_Internal</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Reopen</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Validation</fullName>
                </value>
                <value>
                    <fullName>Open - EDMC</fullName>
                </value>
                <value>
                    <fullName>Renewal not completed</fullName>
                </value>
                <value>
                    <fullName>Input requested</fullName>
                </value>
                <value>
                    <fullName>Pending Reconsideration</fullName>
                </value>
                <value>
                    <fullName>Closed_Disapproved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_performed__c</fullName>
        <label>Storage performed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspend_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true will update the NOC Deadline Date</description>
        <label>Suspend Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspend_in_BSPLink_CASSLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspend in BSPLink/CASSLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspended_in_BSPLink_CASSLink__c</fullName>
        <label>Suspended in BSPLink/CASSLink</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspension_result__c</fullName>
        <label>Suspension result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terminate_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true will update the Termination Date of the agency.</description>
        <label>Terminate Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Used for Late/Absence of NOC</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_result__c</fullName>
        <label>Termination result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_change__c</fullName>
        <label>Type of change</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ownership to non-IATA Agent</fullName>
                </value>
                <value>
                    <fullName>Ownership to IATA Agent</fullName>
                </value>
                <value>
                    <fullName>Legal status</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Location with inspection</fullName>
                </value>
                <value>
                    <fullName>Major Shareholding</fullName>
                </value>
                <value>
                    <fullName>VMFR</fullName>
                </value>
                <value>
                    <fullName>Location type</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Minor Shareholding</fullName>
                </value>
                <value>
                    <fullName>CNS - Removal of trade name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_AIMS_Approval_Date__c</fullName>
        <label>Update AIMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_AIMS_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update AIMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_AIMS_Disapproval_Date__c</fullName>
        <label>Update AIMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_AIMS_Disapproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update AIMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_AIMS_Rejection_Date__c</fullName>
        <label>Update AIMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_AIMS_Rejection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update AIMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_BSPLink_CASSLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update BSPLink / CASSLink / PASS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_BSPLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update BSPLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_DPC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update DPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_IRIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update IRIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_IRIS_processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update IRIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Portal_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Portal Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_account_if_Key_multicountry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update account if Key multicountry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <description>This field is used to control the Assistant Manager and Manager validation status in OSCAR step Validate Qualification Criteria (KC01).</description>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_result__c</fullName>
        <label>Validation result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcome_Pack_Sent__c</fullName>
        <label>Welcome Pack Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_call_performed__c</fullName>
        <label>Welcome call performed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withdrawal_notification_sent__c</fullName>
        <label>Withdrawal notification sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Withdrawal_result__c</fullName>
        <label>Withdrawal result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>